--- a/src/gazap-common-web/pom.xml
+++ b/src/gazap-common-web/pom.xml
@@ -4,7 +4,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
 
-    <name>gazap global site</name>
+    <name>gazap common web</name>
     <groupId>gazap</groupId>
     <artifactId>gazap-common-web</artifactId>
     <version>1.0</version>
