--- a/src/gazap-parent/pom.xml
+++ b/src/gazap-parent/pom.xml
@@ -86,6 +86,22 @@
             </dependency>
 
             <dependency>
+                <groupId>javax.validation</groupId>
+                <artifactId>validation-api</artifactId>
+                <version>1.0.0.GA</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-validator-annotation-processor</artifactId>
+                <version>4.2.0.Final</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-validator</groupId>
+                <artifactId>commons-validator</artifactId>
+                <version>1.4.0</version>
+            </dependency>
+
+            <dependency>
                 <groupId>com.iserv2</groupId>
                 <artifactId>iserv2-commons-mvc</artifactId>
                 <version>${iserv2.version}</version>
