--- a/src/gazap-site/src/main/resources/gazap-site.properties
+++ b/src/gazap-site/src/main/resources/gazap-site.properties
@@ -36,3 +36,7 @@ setup.social.connect.vkontakte.appSecret=sDhasKILUj0x41nu1omG
 setup.social.connect.mailru.clientId=622074
 setup.social.connect.mailru.clientSecret=7cd7bc30d4e0ac15cc638cf5899858a7
 setup.social.connect.mailru.appSecret=aaa1104d132a7fb0d3ef038701160a72
+
+recaptcha.private=6Lf34sMSAAAAAP7fdz4llTAfY8svMGfrqftzLrKb
+recaptcha.public=6Lf34sMSAAAAAKImFtt1YI4SPUxpXjuv_1wiVgmj
+recaptcha.site=yapa.ru
