--- a/src/gazap-common-web/pom.xml
+++ b/src/gazap-common-web/pom.xml
@@ -50,7 +50,7 @@
 
         <dependency>
             <groupId>com.iserv2</groupId>
-            <artifactId>iserv2-commons-mvc</artifactId>
+            <artifactId>iserv2-commons-mvc_base</artifactId>
         </dependency>
 
         <dependency>
