--- a/src/gazap-parent/pom.xml
+++ b/src/gazap-parent/pom.xml
@@ -106,6 +106,11 @@
                 <artifactId>iserv2-commons-mvc</artifactId>
                 <version>${iserv2.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.iserv2</groupId>
+                <artifactId>iserv2-commons-mvc_base</artifactId>
+                <version>${iserv2.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.codehaus.jackson</groupId>
