--- a/src/gazap-site/pom.xml
+++ b/src/gazap-site/pom.xml
@@ -59,6 +59,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.github.wrime</groupId>
+            <artifactId>wrime-in-webmvc</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
         </dependency>
