add domain default MANIFEST

--- a/src/gazap-domain/pom.xml
+++ b/src/gazap-domain/pom.xml
@@ -32,6 +32,9 @@
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
             </plugin>
+            <plugin>
+                <artifactId>maven-jar-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
 
