--- a/src/gazap-site/src/main/resources/gazap-site.properties
+++ b/src/gazap-site/src/main/resources/gazap-site.properties
@@ -40,3 +40,5 @@ setup.social.connect.mailru.appSecret=aaa1104d132a7fb0d3ef038701160a72
 recaptcha.private=6Lf34sMSAAAAAP7fdz4llTAfY8svMGfrqftzLrKb
 recaptcha.public=6Lf34sMSAAAAAKImFtt1YI4SPUxpXjuv_1wiVgmj
 recaptcha.site=yapa.ru
+
+FileServiceImpl.folder=${catalina.home}/gazap/site
