--- a/src/gazap-parent/pom.xml
+++ b/src/gazap-parent/pom.xml
@@ -114,6 +114,11 @@
 
             <dependency>
                 <groupId>org.codehaus.jackson</groupId>
+                <artifactId>jackson-core-asl</artifactId>
+                <version>1.9.4</version>
+            </dependency>
+            <dependency>
+                <groupId>org.codehaus.jackson</groupId>
                 <artifactId>jackson-mapper-asl</artifactId>
                 <version>1.9.4</version>
             </dependency>
