first tile picture

--- a/src/gazap-site/src/main/resources/gazap-site.properties
+++ b/src/gazap-site/src/main/resources/gazap-site.properties
@@ -41,4 +41,4 @@ recaptcha.private=6Lf34sMSAAAAAP7fdz4llTAfY8svMGfrqftzLrKb
 recaptcha.public=6Lf34sMSAAAAAKImFtt1YI4SPUxpXjuv_1wiVgmj
 recaptcha.site=yapa.ru
 
-FileServiceImpl.folder=${catalina.home}/gazap/site
+FileServiceImpl.tilesFolder=${catalina.home}/gazap/tiles
