--- a/src/gazap-common-web/pom.xml
+++ b/src/gazap-common-web/pom.xml
@@ -49,6 +49,15 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity-tools</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.iserv2</groupId>
             <artifactId>iserv2-commons-mvc_base</artifactId>
         </dependency>
@@ -69,10 +78,6 @@
         <dependency>
             <groupId>net.sf.ehcache</groupId>
             <artifactId>ehcache</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.velocity</groupId>
-            <artifactId>velocity</artifactId>
         </dependency>
 
         <!-- spring -->
