--- a/src/waypalm-parent/pom.xml
+++ b/src/waypalm-parent/pom.xml
@@ -41,6 +41,7 @@
     </repositories>
 
     <properties>
+        <project.java.version>1.7</project.java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <springframework.version>3.1.2.RELEASE</springframework.version>
@@ -311,8 +312,8 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>2.3.2</version>
                     <configuration>
-                        <target>1.7</target>
-                        <source>1.7</source>
+                        <target>${project.java.version}</target>
+                        <source>${project.java.version}</source>
                         <encoding>UTF-8</encoding>
                         <debug>true</debug>
                     </configuration>
