--- a/src/waypalm-common-web/pom.xml
+++ b/src/waypalm-common-web/pom.xml
@@ -149,6 +149,11 @@
             <artifactId>xalan</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
+
         <!-- domain -->
         <dependency>
             <groupId>mysql</groupId>
