--- a/src/waypalm-site/src/main/resources/waypalm-site.properties
+++ b/src/waypalm-site/src/main/resources/waypalm-site.properties
@@ -40,5 +40,6 @@ setup.social.connect.mailru.appSecret=aaa1104d132a7fb0d3ef038701160a72
 recaptcha.private=6Lf34sMSAAAAAP7fdz4llTAfY8svMGfrqftzLrKb
 recaptcha.public=6Lf34sMSAAAAAKImFtt1YI4SPUxpXjuv_1wiVgmj
 recaptcha.site=yapa.ru
+recaptcha.enabled=false
 
 FileServiceImpl.tilesFolder=${catalina.home}/waypalm/tiles
