--- a/src/waypalm-parent/pom.xml
+++ b/src/waypalm-parent/pom.xml
@@ -107,6 +107,11 @@
                 <artifactId>iserv2-commons-mvc_base</artifactId>
                 <version>${iserv2.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.iserv2</groupId>
+                <artifactId>iserv2-commons-lang-text</artifactId>
+                <version>${iserv2.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.codehaus.jackson</groupId>
