--- a/src/waypalm-site/src/test/resources/message.properties
+++ b/src/waypalm-site/src/test/resources/message.properties
@@ -1,6 +1,2 @@
 just.message=Welcome, {0}!
-
-seconds!pl=RPL
-seconds.RPL1={0} \u0441\u0435\u043A\u0443\u043D\u0434\u0430
-seconds.RPL2={0} \u0441\u0435\u043A\u0443\u043D\u0434\u044B
-seconds.n={0} \u0441\u0435\u043A\u0443\u043D\u0434
+seconds={0,plural,R1#{0} \u0441\u0435\u043A\u0443\u043D\u0434\u0430|R2#{0} \u0441\u0435\u043A\u0443\u043D\u0434\u044B|{0} \u0441\u0435\u043A\u0443\u043D\u0434}
