--- a/src/waypalm-parent/pom.xml
+++ b/src/waypalm-parent/pom.xml
@@ -85,6 +85,12 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>javax.inject</groupId>
+                <artifactId>javax.inject</artifactId>
+                <version>1</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-stdlib</artifactId>
                 <version>${kotlin.version}</version>
@@ -406,7 +412,6 @@
                                 <goal>compile</goal>
                             </goals>
                         </execution>
-
                         <execution>
                             <id>test-compile</id>
                             <phase>process-test-sources</phase>
