--- a/src/waypalm-domain/pom.xml
+++ b/src/waypalm-domain/pom.xml
@@ -35,6 +35,10 @@
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
             </plugin>
+            <plugin>
+                <artifactId>kotlin-maven-plugin</artifactId>
+                <groupId>org.jetbrains.kotlin</groupId>
+            </plugin>
         </plugins>
     </build>
 
