--- a/src/waypalm-common-web/pom.xml
+++ b/src/waypalm-common-web/pom.xml
@@ -38,6 +38,10 @@
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
             </plugin>
+            <plugin>
+                <artifactId>kotlin-maven-plugin</artifactId>
+                <groupId>org.jetbrains.kotlin</groupId>
+            </plugin>
         </plugins>
     </build>
 
@@ -46,6 +50,11 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>waypalm-domain</artifactId>
             <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib</artifactId>
         </dependency>
 
         <dependency>
