change autowired to inject

--- a/src/waypalm-parent/pom.xml
+++ b/src/waypalm-parent/pom.xml
@@ -80,6 +80,11 @@
                 <artifactId>mail</artifactId>
                 <version>1.4</version>
             </dependency>
+            <dependency>
+                <groupId>javax.inject</groupId>
+                <artifactId>javax.inject</artifactId>
+                <version>1</version>
+            </dependency>
 
             <dependency>
                 <groupId>javax.validation</groupId>
