--- a/src/waypalm-common-web/pom.xml
+++ b/src/waypalm-common-web/pom.xml
@@ -43,6 +43,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>waypalm-domain</artifactId>
             <version>${project.version}</version>
