--- a/src/waypalm-common-web/pom.xml
+++ b/src/waypalm-common-web/pom.xml
@@ -85,6 +85,10 @@
         </dependency>
 
         <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+        </dependency>
+        <dependency>
             <groupId>javax.mail</groupId>
             <artifactId>mail</artifactId>
         </dependency>
