--- a/src/waypalm-parent/pom.xml
+++ b/src/waypalm-parent/pom.xml
@@ -38,6 +38,18 @@
                 <enabled>false</enabled>
             </snapshots>
         </repository>
+        <!-- For testing against latest Spring snapshots -->
+        <repository>
+            <id>org.springframework.maven.snapshot</id>
+            <name>Spring Maven Snapshot Repository</name>
+            <url>http://maven.springframework.org/snapshot</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
     </repositories>
 
     <properties>
